layouts/partials/css/main.css
/* ... */
.icon {
    text-rendering: geometricPrecision !important;
}

section {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    width: 100%;
}

div.column {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    width: 100%;
}

.container {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    width: 100%;
}

div.header .container {
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
}

div.header .content {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-flex-direction: column;
    -moz-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
}

div.header .container .logo {
    {{ if .Site.Params.enlarged }}
    max-width: 140px;
    {{ else }}
    max-width: 100px;
    {{ end }}
}

div.header .name {
    padding-top: 20px;
    margin-left: 20px;
    font-size: 28px;
    font-family: 'Nexa Bold', 'Helvetica Neue', 'Arial', sans-serif;
    letter-spacing: -0.005rem;
    {{ if isset .Site.Params "titlestyle" }}
    {{ if in "capitalize uppercase lowercase none full-width" .Site.Params.titlestyle }}
    text-transform: {{ .Site.Params.titlestyle }};
    {{ else }}
    {{ errorf "This titlestyle is not a valid text-transform css parameter: %s" .Site.Params.titlestyle }}
    {{ end }}
    {{ else }}
    text-transform: uppercase;
    {{ end }}
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-smoothing: antialiased;
    color: #333333;
}

div.header nav {
    margin-left: 20px;
    margin-bottom: 16px;
}

div.header nav ul {
    list-style: none;
    text-align: center;
    display: -webkit-inline-flex;
    display: -moz-inline-flex;
    display: -ms-inline-flexbox;
    display: -ms-inline-flex;
    display: inline-flex;
}

div.header nav ul li {
    margin-left: 6px;
    margin-right: 6px;
}

div.header nav ul li:first-child {
    margin-left: 0;
}

div.header nav ul li:last-child {
    margin-right: 0;
}

div.header nav ul a {
    color: #555555;
    font-weight: 400;
    font-size: 14px;
    text-transform: uppercase;
    font-family: 'Helvetica Neue', 'Arial', sans-serif;
    -webkit-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -moz-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -ms-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -o-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
}

div.header nav ul a:hover {
    color: #111111;
}

div.footer .container {
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
    flex-direction: column-reverse;
    width: 100%;
    text-align: center;
}

div.footer .container a {
    font-size: 14px;
    margin-left: 6px;
    margin-right: 6px;
    opacity: 0.6;
    -webkit-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -moz-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -ms-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
    -o-transition: opacity 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
}

div.footer .container a:first-child {
    margin-left: 0;
}

div.footer .container a:last-child {
    margin-right: 0;
}

div.footer .container a:hover {
    opacity: 0.8;
}

div.footer .container a .icon {
    width: 16px;
    height: 16px;
}

div.footer .container .copyright {
    flex-grow: 0.5;
    text-align: start;
}

div.footer .container .icons {
    flex-grow: 0.5;
    text-align: end;
}

div.main .container {
    -webkit-align-items: center;
    -moz-align-items: center;
    -ms-align-items: center;
    align-items: center;
    -webkit-justify-content: flex-start;
    -moz-justify-content: flex-start;
    -ms-justify-content: flex-start;
    justify-content: flex-start;
}

div.main .content {
    color: #111111;
    font-size: 16px;
}

div.main .content .title-container {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: -ms-flex;
    display: flex;
    -webkit-justify-content: space-between;
    -moz-justify-content: space-between;
    -ms-justify-content: space-between;
    justify-content: space-between;
}

div.main .content .posts {
    {{ $nbPosts := len (where .Data.Pages "Params.best" true) }}
    {{ if gt $nbPosts 0 }}
    margin-bottom: 4em;
    {{ end }}
}

div.main .content .page-heading {
    font-size: 20px;
    font-weight: 700;
    font-family: 'Helvetica Neue', 'Arial', sans-serif;
    letter-spacing: -0.005rem;
    text-transform: uppercase;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    font-smoothing: antialiased;
    color: #333333;
    margin-bottom: 16px;
}

div.main .content .front-matter .page-heading {
    margin-bottom: 0;
}
/* ... */

